tests/ui/parser/issues/issue-62913.stderr
error: incorrect unicode escape sequence
  --> $DIR/issue-62913.rs:2:10
   |
LL |     _ = "\u\";
   |          ^^^ incorrect unicode escape sequence
   |
   = help: format of unicode escape sequences is `\u{...}`

error: invalid trailing slash in literal
  --> $DIR/issue-62913.rs:2:13
   |
LL |     _ = "\u\";
   |             ^ invalid trailing slash in literal

error: aborting due to 2 previous errors

